--- a/playbooks/create_vm.yml
+++ b/playbooks/create_vm.yml
@@ -18,3 +18,11 @@
     - name: Include create vm role
       ansible.builtin.include_role:
         name: lab.aws_infrastructure_config_demos.create_vm
+
+    - name: Add VM to AAP host group
+      awx.awx.group:
+        name: "{{ vm_application }}"
+        description: "Local Host Group"
+        inventory: Default Inventory
+        hosts:
+          - "{{ {{ create_vm_vm_name }}"
